--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,16 @@
-$color: steelblue;
+// $maincolor: #ff5757;
+// $secondcolor: #081012;
+// $thirdcolor: #E0AB9A;
+// $fourthcolor: #4D8FC3;
 
 @import '~bootstrap/scss/bootstrap.scss';
 
-.my-flix {
-  color: $color;
-}
+// .my-flix {
+//   color: $color;
+// }
+
+// a,
+// p,
+// label {
+//     letter-spacing: 0.1rem;
+// }
