--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 // $thirdcolor: #E0AB9A;
 // $fourthcolor: #4D8FC3;
 
-@import '~bootstrap/scss/bootstrap.scss';
+@import "../../node_modules/bootstrap/scss/bootstrap";
 
 // .my-flix {
 //   color: $color;
